--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -852,12 +852,12 @@ call-to-action .button {
    line-height: 24px;
    width: 65%;
 }
-#contact input:focus,
+/* #contact input:focus,
 #contact textarea:focus,
 #contact select:focus {
 	color: #fff;
-	background-color: #11ABB0;
-}
+
+} */
 #contact button.submit {
 	text-transform: uppercase;
 	letter-spacing: 3px;
